<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeWidth="1dp"
            app:strokeColor="@color/stroke_color"
            app:cardElevation="0dp"
            android:layout_margin="8dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/imageViewMovieListPoster"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:backgroundTint="@color/black"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content_description_media"
                    android:background="@color/white"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:id="@+id/textViewMovieListTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="17sp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:textAppearance="?attr/textAppearanceHeadline6"/>
                <TextView
                        android:id="@+id/textViewMovieListRelease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/secondary_text"
                        android:textSize="13sp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>