<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.movie.MovieDetailActivity"
        android:layout_margin="3dp">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/imageViewMovieDetailPoster"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:backgroundTint="@color/black"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description_media"
                android:background="@color/white"/>
        <TextView
                android:id="@+id/textViewMovieDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_gravity="bottom"
                android:padding="10dp"/>
    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.5">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:baselineAligned="false"
                tools:ignore="UselessParent">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_released_date"
                        android:textColor="@color/gray"
                        android:textSize="13sp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:padding="8dp"/>
                <TextView
                        android:id="@+id/textViewMovieDetailReleasedDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:padding="8dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_genre_type"
                        android:textColor="@color/gray"
                        android:textSize="13sp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:padding="8dp"/>
                <TextView
                        android:id="@+id/textViewMovieDetailGenreType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:padding="8dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_director"
                        android:textColor="@color/gray"
                        android:textSize="13sp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:padding="8dp"/>
                <TextView
                        android:id="@+id/textViewMovieDetailDirector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                <TextView
                        android:id="@+id/textViewMovieDetailIMDB"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="8.6"
                        android:textColor="@color/black"
                        android:textSize="60sp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:padding="8dp"
                        android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
        <TextView
                android:id="@+id/textViewMovieDetailPlot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plot"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/ubuntu_regular"
                android:padding="8dp">
        </TextView>

    </LinearLayout>
</LinearLayout>